Add incompatible status.
If an RPC call fails to a particular node for 
a reason other than nodedown, mark the node as 
Incompatible with Control, rather than reporting
the node as being Unreachable.

This prevents false alarms during upgrades where
a portion of the cluster may be running a 
pre-1.1 release.

--- a/README.org
+++ b/README.org
@@ -74,6 +74,11 @@ This is a quick "health check" for your cluster. If Riak Control finds
 anything worrisome, it will let you know and provide links to pages
 where you can diagnose and/or fix the problem.
 
+If a node is running Riak pre-1.1, it will be listed as incompatible
+in the Riak Control interface.  While in this state, Riak Control will
+be unable to retrieve and display statistics and configuration for that
+node.
+
 ** Cluster
 This is a high-level overview of your cluster. It lists each of the
 nodes in the cluster and their current status, partition ownerships,
